<resources>
    <string name="app_name">钱包</string>

    <string name="text_logo">视频达人</string>
    <!--应用说明-->
    <string name="app_desc">应用说明</string>
    <!--应用归属-->
    <string name="app_version"> </string>
    <string name="app_check">检查更新中…</string>
    <!--登录注册-->
    <string name="name_hint">请输入用户名</string>
    <string name="password_hint">请输入用密码</string>
    <string name="password_again_hint">请确认密码</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="email_hint">请输入电子邮箱</string>
    <string name="return_login">返回登录</string>
    <string name="login">登录</string>
    <string name="registered">注册</string>
    <string name="lose_password">忘记密码 | 注册账号</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="other_login">第三方登录</string>
    <string name="inconsistent_passwords">两次输入的密码不一致</string>

</resources>
